# ai-visibility-tracker

./: DATABASE_SETUP.md  LICENSE  README.md  SETUP.md  package-lock.json  package.json  supabase-schema.sql  vercel.json
app/: layout.tsx  page.tsx
app/analytics/: page.tsx
app/brands/: page.tsx
app/dashboard/: page.tsx
app/query-library/: page.tsx
app/scans/: page.tsx
backend/: .vercelignore  Dockerfile  alembic.ini  docker-compose.services.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
backend/app/: db.py  main.py  settings.py  utils.py
backend/app/alembic/: env.py  utils.py
backend/app/alembic/versions/: 20250915-b8483a7a6c37_initial.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/v1/: companies.py  dashboard.py  prompts.py  recommendations.py
backend/app/crud/: company.py  dashboard.py  llm_costs.py  prompts.py  quota.py  recommendations.py
backend/app/fetchers/: __init__.py  direct.py  fetch_status.py
backend/app/llm/: company_crawl.py  competitor_suggestions.py  completion.py  prompt_suggestions.py  recommendations.py
backend/app/llm/prompt_analyzers/: __init__.py  gemini_api.py  helpers.py  openai_api.py
backend/app/models/: __init__.py  company.py  company_crawl.py  competitor.py  crud_context.py  dashboard.py  llm_costs.py  monitored_prompt.py  prompt_monitoring.py  recommendation.py  types.py
backend/app/tests/: conftest.py  fixtures.py  test_crud.py  test_dashboard.py  test_prompt_monitoring.py  test_prompts.py
backend/app/worker/: celery_app.py  task_dispatcher.py  worker.py
backend/app/worker/analyzers/: __init__.py  analyze_prompt.py
backend/app/worker/fetchers/: __init__.py  company_competitor.py  company_crawl.py  company_prompt.py
backend/app/worker/recommendations/: __init__.py  generate.py
backend/app/worker/scheduled/: README.md  __init__.py  trigger_prompt_monitoring.py
components/ui/: badge.tsx  button.tsx  (+3 more)
docs/: vercel-env-setup.md
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
lib/: brand-detector.ts  supabase.ts  types.ts
(+81 files in other folders)
